--- a/src/mainwindow.ui
+++ b/src/mainwindow.ui
@@ -305,6 +305,18 @@
           </widget>
           <widget class="QWidget" name="pageWorkAreaComposite">
            <layout class="QGridLayout" name="gridLayout_4">
+            <property name="leftMargin">
+             <number>0</number>
+            </property>
+            <property name="topMargin">
+             <number>0</number>
+            </property>
+            <property name="rightMargin">
+             <number>0</number>
+            </property>
+            <property name="bottomMargin">
+             <number>0</number>
+            </property>
             <item row="1" column="0">
              <widget class="QSlider" name="viewSlider">
               <property name="maximum">
