--- a/src/mainwindow.ui
+++ b/src/mainwindow.ui
@@ -423,7 +423,7 @@
            </spacer>
           </item>
           <item>
-           <widget class="QLabel" name="label">
+           <widget class="QLabel" name="lblViewMode">
             <property name="text">
              <string>&amp;View:</string>
             </property>
