--- a/src/mainwindow.ui
+++ b/src/mainwindow.ui
@@ -746,10 +746,16 @@
    <property name="shortcut">
     <string>Ctrl+Q</string>
    </property>
+   <property name="menuRole">
+    <enum>QAction::QuitRole</enum>
+   </property>
   </action>
   <action name="actionAbout_Morning_Star">
    <property name="text">
     <string>About &amp;Wespal...</string>
+   </property>
+   <property name="menuRole">
+    <enum>QAction::AboutRole</enum>
    </property>
   </action>
   <action name="action_Save">
@@ -770,10 +776,16 @@
    <property name="visible">
     <bool>true</bool>
    </property>
+   <property name="menuRole">
+    <enum>QAction::ApplicationSpecificRole</enum>
+   </property>
   </action>
   <action name="action_Palettes">
    <property name="text">
     <string>Custom &amp;Palettes...</string>
+   </property>
+   <property name="menuRole">
+    <enum>QAction::ApplicationSpecificRole</enum>
    </property>
   </action>
   <action name="action_Reload">
