--- a/src/mainwindow.ui
+++ b/src/mainwindow.ui
@@ -723,6 +723,7 @@
      <addaction name="actionZoom200"/>
      <addaction name="actionZoom400"/>
      <addaction name="actionZoom800"/>
+     <addaction name="actionZoom1600"/>
     </widget>
     <widget class="QMenu" name="menuBgColor">
      <property name="title">
@@ -897,7 +898,7 @@
     <string>&amp;50%</string>
    </property>
    <property name="shortcut">
-    <string>Ctrl+5</string>
+    <string>Ctrl+6</string>
    </property>
   </action>
   <action name="actionZoom100">
@@ -1015,6 +1016,17 @@
    </property>
    <property name="text">
     <string>&amp;White</string>
+   </property>
+  </action>
+  <action name="actionZoom1600">
+   <property name="checkable">
+    <bool>true</bool>
+   </property>
+   <property name="text">
+    <string>1000%</string>
+   </property>
+   <property name="shortcut">
+    <string>Ctrl+5</string>
    </property>
   </action>
  </widget>
